--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM tensorflow/tensorflow:1.12.0-gpu-py3
-RUN pip install bert-serving-server[http]
+RUN pip install transformer-as-service[http] transformer
 RUN mkdir -p /app
-COPY ./docker/entrypoint.sh /app
+COPY ./entrypoint.sh /app
 WORKDIR /app
 ENTRYPOINT ["/app/entrypoint.sh"]
 CMD []
